# julyfork

./: .setup.py.swp  README.md  pyproject.toml
src/juillet/: helpers.py  plot.py  rcmod.py
src/july/: helpers.py
