[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "july"
version = "26.1.1"
readme = 'README.md'
requires-python = ">=3.9"
authors = [{ name = "R. Thomas", email = "romain.alexis.gerard.thomas@gmail.com" }]
dependencies = ["matplotlib >= 3.9",
                "numpy >= 2.0.2"]

[project.urls]
repository = "https://github.com/Romain-Thomas-Shef/juillet"


[tool.hatch.build.targets.sdist]
include = ["/src"]
